--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "main": "dist-electron/main.js",
     "scripts": {
         "dev": "npm-run-all --parallel dev:react dev:electron",
-        "dev:react": "vite --host",
+        "dev:react": "vite",
         "dev:electron": "npm run transpile:electron && cross-env NODE_ENV=development electron .",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
