--- a/package.json
+++ b/package.json
@@ -15,18 +15,30 @@
         "dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64"
     },
     "dependencies": {
+        "@deck.gl/core": "^9.1.8",
+        "@deck.gl/layers": "^9.1.8",
+        "@deck.gl/mapbox": "^9.1.8",
+        "@deck.gl/mesh-layers": "^9.1.8",
+        "@deck.gl/react": "^9.1.8",
+        "@luma.gl/core": "^9.1.7",
+        "@react-leaflet/core": "^3.0.0",
+        "@react-three/drei": "^10.0.5",
+        "@react-three/fiber": "^9.1.1",
         "leaflet": "^1.9.4",
         "react": "^19.0.0-rc.1",
         "react-dom": "^19.0.0-rc.1",
-        "react-leaflet": "^5.0.0-rc.2",
+        "react-leaflet": "^5.0.0",
+        "react-map-gl": "^8.0.2",
         "react-router-dom": "^7.1.3",
-        "react-webcam": "^7.2.0"
+        "react-webcam": "^7.2.0",
+        "three": "^0.175.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
         "@types/leaflet": "^1.9.16",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
+        "@types/three": "^0.175.0",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
         "cross-env": "^7.0.3",
