--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@react-leaflet/core": "^3.0.0",
         "@react-three/drei": "^10.0.5",
         "@react-three/fiber": "^9.1.1",
+        "chart.js": "^4.4.9",
         "leaflet": "^1.9.4",
         "react": "^19.0.0-rc.1",
         "react-dom": "^19.0.0-rc.1",
@@ -35,6 +36,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
+        "@types/chart.js": "^2.9.41",
         "@types/leaflet": "^1.9.16",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
